Fix EA reflection callout gap

--- a/styles.css
+++ b/styles.css
@@ -1838,6 +1838,10 @@ a.project-card {
   text-align: center;
 }
 
+.ea-reflection-callout + p {
+  margin-top: 0;
+}
+
 .ea-reflection-section a {
   color: inherit;
   padding: 0 3px 1px;
